--- a/sass/site.scss
+++ b/sass/site.scss
@@ -649,7 +649,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#767676', end
   .grid-item { 
     float: left;
     width: 30%;
-    transition: 400ms;
+    // transition: 400ms;
   }
 
   .grid-sizer {
@@ -715,6 +715,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#767676', end
   bottom: 50px;
   right: 40px;
   opacity: 0;
+  z-index: 20;
   transition: 400ms;
 
   &.active {
